Rearranged titles and headings in intro section and assigned them their own class - fixed slight height issue with gh button - made overlapping divs with different colors to "frame" About me content nad links - will do the same to the soft skills area

--- a/styles.css
+++ b/styles.css
@@ -1258,6 +1258,7 @@ section {
     height: 100%;
     width: 100%;
     background-color: #553692;
+    background-color: #662D91;
 }
 /*.button_effect {
     display: block;
@@ -1484,12 +1485,23 @@ textarea {
 #about {
     height: 120px;
 }
+.section_heading {
+    width: 100%;
+    /*font-size: 8vw;*/
+    font-size: 75pt;
+    color: #2C529A;
+    color: #486AAC;
+    color: #456299;
+    margin-bottom: -30px;
+}
 .intro_container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
     background-color: #253C84;
     padding: 30px;
+    padding-top: 0;
+    margin-top: 30px;
 }
 .intro_container h2 {
     width: 100%;
@@ -1500,6 +1512,7 @@ textarea {
 }
 #about_me {
     max-width: 45vw;
+    margin-top: -30px;
     margin-right: 15px;
     min-width: 420px;
 }
@@ -1540,7 +1553,7 @@ textarea {
     justify-content: center;
 }*/
 .gh_text {
-    height: 55px;
+    height: 58px;
     width: 100%;
     justify-content: center;
 }
